--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Cirripedia'
 - !lcc 'QH'
 - !lcc 'QL'
+- GITenberg
 title: "A Monograph on the Sub-class Cirripedia (Volume 1 of 2)\r\nThe Lepadidae;\
   \ Or, Pedunculated Cirripedes"
 url: http://www.gutenberg.org/ebooks/31558
